--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
 <meta charset="UTF-8">
 <title>Movie Project</title>
 </head>
-<!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
+
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet" href="./lib/bower_components/Materialize/dist/css/materialize.min.css"/>
+<link rel="stylesheet" type="text/css" href="styles/main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 <body ng-app= "MovieHistory">
 <div ng-include= "navBar.hmtl"></div>
 
 <div ng-view>
-
-
 </div>
 
 
 
 
 <script type="text/javascript" src="lib/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 <script type="text/javascript" src="lib/bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="lib/bower_components/firebase/firebase.js"></script>
 <script type="text/javascript" src="lib/bower_components/angularfire/dist/angularfire.min.js"></script>
 <script type="text/javascript" src="lib/bower_components/angular-route/angular-route.min.js"></script>
-<script type="text/javascript" src= "lib/bower_components/Materialize/dist/js/materialize.min.js"></script>
 <script type="text/javascript" src="
 https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
